--- a/VacationPy/VacationPy-working.ipynb
+++ b/VacationPy/VacationPy-working.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4       11.18      RU  1605855251  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42c2f9d20d434e2bac671adc637f31a8",
+       "model_id": "b005b649151f464486103f47c7eb4569",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +215,7 @@
     "fig = gmaps.figure()\n",
     "\n",
     "# Create heat layer\n",
-    "heat_layer = gmaps.heatmap_layer(locations,weights=humidity,max_intensity=humidity.max(),point_radius=2,dissipating=False)\n",
+    "heat_layer = gmaps.heatmap_layer(locations,weights=humidity,max_intensity=humidity.max(),point_radius=3,dissipating=False)\n",
     "\n",
     "# Add layer\n",
     "fig.add_layer(heat_layer)\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "519        2.06      CD  1605855352  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,10 +394,357 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\novad\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>cape town</td>\n",
+       "      <td>-33.93</td>\n",
+       "      <td>18.42</td>\n",
+       "      <td>71.01</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1605855252</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>port macquarie</td>\n",
+       "      <td>-31.43</td>\n",
+       "      <td>152.92</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1605855266</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>odienne</td>\n",
+       "      <td>9.51</td>\n",
+       "      <td>-7.57</td>\n",
+       "      <td>67.77</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>CI</td>\n",
+       "      <td>1605855310</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>makakilo city</td>\n",
+       "      <td>21.35</td>\n",
+       "      <td>-158.09</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1605855347</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>agaro</td>\n",
+       "      <td>7.85</td>\n",
+       "      <td>36.65</td>\n",
+       "      <td>75.29</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>1605855351</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>butembo</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>29.28</td>\n",
+       "      <td>73.06</td>\n",
+       "      <td>58</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>1605855352</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "8         cape town -33.93   18.42     71.01        52           0   \n",
+       "157  port macquarie -31.43  152.92     79.00        60           0   \n",
+       "307         odienne   9.51   -7.57     67.77        61           0   \n",
+       "494   makakilo city  21.35 -158.09     78.80        69           1   \n",
+       "516           agaro   7.85   36.65     75.29        50           3   \n",
+       "519         butembo   0.15   29.28     73.06        58           2   \n",
+       "\n",
+       "     Wind Speed Country        Date Hotel Name  \n",
+       "8          3.36      ZA  1605855252             \n",
+       "157        1.01      AU  1605855266             \n",
+       "307        2.95      CI  1605855310             \n",
+       "494        4.70      US  1605855347             \n",
+       "516        1.34      ET  1605855351             \n",
+       "519        2.06      CD  1605855352             "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add Hotel Name column to df\n",
+    "ideal_cities[\"Hotel Name\"] = \"\"\n",
+    "hotel_df = ideal_cities\n",
+    "hotel_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\novad\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexing.py:1765: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  isetter(loc, value)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>cape town</td>\n",
+       "      <td>-33.93</td>\n",
+       "      <td>18.42</td>\n",
+       "      <td>71.01</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1605855252</td>\n",
+       "      <td>Blue Views Studios</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>157</th>\n",
+       "      <td>port macquarie</td>\n",
+       "      <td>-31.43</td>\n",
+       "      <td>152.92</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1605855266</td>\n",
+       "      <td>Sails Port Macquarie by Rydges</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>307</th>\n",
+       "      <td>odienne</td>\n",
+       "      <td>9.51</td>\n",
+       "      <td>-7.57</td>\n",
+       "      <td>67.77</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.95</td>\n",
+       "      <td>CI</td>\n",
+       "      <td>1605855310</td>\n",
+       "      <td>HÔTEL SARAH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>makakilo city</td>\n",
+       "      <td>21.35</td>\n",
+       "      <td>-158.09</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1605855347</td>\n",
+       "      <td>Marriott's Ko Olina Beach Club</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>agaro</td>\n",
+       "      <td>7.85</td>\n",
+       "      <td>36.65</td>\n",
+       "      <td>75.29</td>\n",
+       "      <td>50</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>ET</td>\n",
+       "      <td>1605855351</td>\n",
+       "      <td>No Hotel Found</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>519</th>\n",
+       "      <td>butembo</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>29.28</td>\n",
+       "      <td>73.06</td>\n",
+       "      <td>58</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>CD</td>\n",
+       "      <td>1605855352</td>\n",
+       "      <td>Hotel Ivatsiro</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "8         cape town -33.93   18.42     71.01        52           0   \n",
+       "157  port macquarie -31.43  152.92     79.00        60           0   \n",
+       "307         odienne   9.51   -7.57     67.77        61           0   \n",
+       "494   makakilo city  21.35 -158.09     78.80        69           1   \n",
+       "516           agaro   7.85   36.65     75.29        50           3   \n",
+       "519         butembo   0.15   29.28     73.06        58           2   \n",
+       "\n",
+       "     Wind Speed Country        Date                      Hotel Name  \n",
+       "8          3.36      ZA  1605855252              Blue Views Studios  \n",
+       "157        1.01      AU  1605855266  Sails Port Macquarie by Rydges  \n",
+       "307        2.95      CI  1605855310                     HÔTEL SARAH  \n",
+       "494        4.70      US  1605855347  Marriott's Ko Olina Beach Club  \n",
+       "516        1.34      ET  1605855351                  No Hotel Found  \n",
+       "519        2.06      CD  1605855352                  Hotel Ivatsiro  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_search = \"hotel\"\n",
+    "target_radius = 5000\n",
+    "target_type = \"lodging\"\n",
+    "\n",
+    "# Set up parameters dictionary\n",
+    "params = {\n",
+    "    \"keyword\": target_search,\n",
+    "    \"radius\": target_radius,\n",
+    "    \"type\": target_type,\n",
+    "    \"key\": gkey\n",
+    "}\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    # get lat,lng from df\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
+    "    if row[\"Hotel Name\"] == \"\":\n",
+    "        params[\"location\"] = f\"{lat},{lng}\"\n",
+    "        \n",
+    "        # make request\n",
+    "        hotel_search = requests.get(base_url,params=params)\n",
+    "        \n",
+    "        # convert to json\n",
+    "        hotel_data = hotel_search.json()\n",
+    "        \n",
+    "        try:\n",
+    "            hotel_df.loc[index, \"Hotel Name\"] = hotel_data[\"results\"][0][\"name\"]\n",
+    "        except:\n",
+    "            hotel_df.loc[index, \"Hotel Name\"] = \"No Hotel Found\"\n",
+    "\n",
+    "hotel_df"
+   ]
   },
   {
    "cell_type": "code",
@@ -408,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,14 +777,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b005b649151f464486103f47c7eb4569",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
-    "\n",
-    "\n",
-    "# Display figure\n"
+    "markers = gmaps.marker_layer(locations,info_box_content=hotel_info)\n",
+    "fig.add_layer(markers)\n",
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
