added observed trends

--- a/WeatherPy/WeatherPy-Working.ipynb
+++ b/WeatherPy/WeatherPy-Working.ipynb
@@ -12,6 +12,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Observed Trends\n",
+    "* The closer you get to the equator the hotter it tends to be, this is the same for both Northern and Southern Hemispheres.\n",
+    "* Wind speed and humidity have very small correlation to the latitude a city is in.\n",
+    "* Overall there does not seem to be much correlation between cloudniess and latitude of a city, but when broken into hemispheres, there is a weak positive correlation. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
